# PacIFiC-basilisk

./: .gitignore  CMakeLists.txt  CMakePresets.json  default.nix
.copr/: Makefile  build_srpm.sh
cmake/: basiliskConfig.cmake.in  basilisk_add_executable.cmake
debian/: README  changelog  control  copyright  pacific-basilisk.install  rules
rpm/: pacific-basilisk.spec
src/: CMakeLists.txt
src/ast/: macro.h  translate.c
src/ast/interpreter/: declarations.h  interpreter.c  test11.ref  test26.ref  test4.ref
src/darcsit/: apply.sh  record.sh
src/gl/: CMakeLists.txt
src/gl/tinyrenderer/: CMakeLists.txt
src/grid/: cartesian-common.h  config.h  multigrid.h
src/test/: macro.c  macro.ref  mpi-reduce.c  vertices-bc.c  vertices-bc.ref
